# virtualenvwrapper

./: .gitignore  Makefile  pyproject.toml  tox.ini  virtualenvwrapper.sh
docs/: requirements.txt
docs/source/: command_ref.rst  conf.py  index.rst  install.rst
tests/: run_tests  setup.sh  test.sh  test_add2virtualenv.sh  test_project_templates.sh  test_support.sh
tests/testpackage/: testscript.py
tests/testtemplate/: setup.py
tests/testtemplate/mytemplates/: main.py
virtualenvwrapper/: __init__.py
